java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable4.pass
package org.netbeans.test.java.hints;

public abstract class CreateLocalVariable4 {
    
    /** Creates a new instance of AbstractClass */
    public CreateLocalVariable4() {
        String foo = "cccc";
        foo = "bar";
    }
    
}
